src/objects/Account_Merge_Update__mdt.object
<CustomObject>
    <description>Account Merge Update Custom Metadata Type</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address__c</fullName>
                    <default>true</default>
                    <label>Address__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Field_API_Name__c</fullName>
        <description>Reference Field- Account Field API Name</description>
        <label>Reference Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <description>Target Field API Name</description>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Data_Type__c</fullName>
        <description>The Data type for Target fields</description>
        <label>Target Field Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text(255)</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field_Value__c</fullName>
        <description>Value for the target field to be updated.</description>
        <label>Target Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Merge Update</label>
    <pluralLabel>Account Merge Update</pluralLabel>
</CustomObject>